--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,7 @@
 /* This file is for your main application CSS */
-@import "./phoenix.css";
+
 @import "bulma";
+@import "custom";
 // our new sassy style
 $phoenix-orange: #f05423;
 .phx-hero {
