--- a/lib/the_brogrammer_web/templates/page/index.html.heex
+++ b/lib/the_brogrammer_web/templates/page/index.html.heex
@@ -2,40 +2,36 @@
   <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>Peace of mind from prototype to production</p>
 </section>
+<section class="hero is-fullheight with-image">
+<div class="hero-body">
 
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.6/CHANGELOG.md">v1.6 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://web.libera.chat/#elixir">#elixir on Libera Chat (IRC)</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-      <li>
-        <a href="https://discord.gg/elixir">Elixir on Discord</a>
-      </li>
-    </ul>
-  </article>
-</section>
+
+
+
+    <div class="message">
+    <div class="message-header">
+        <p>...to the home of the unlikely agglomeration of all things coding, lifting and muming.</p>
+
+
+
+    </div>
+
+    <div class="message-body">
+
+        <p>This is where I will be sharing my journey towards becoming a professional Elixir Developer.</p>
+        <p>My name is Cornelia Kelinske. Up until a few months ago, I was working as a freelance translator for the language combination
+      German into English and vice versa. However, in light of the fundamental changes in the translation world brought about by the emergence
+      and rapid improvement of various machine translation applications, I have decided to jump ship. Instead of cruising through the waters of the international
+      translation industry, I will set out for the deep sea of backend web development.</p>
+      <p>My goal is to not only write about the technical and professional aspects of this career change, but also about the practical side and the emotions going along with it.
+      What is it like for a woman, wife and mother in her late 30s to start on a completely new career path? I guess we"ll find out.</p>
+      <p>And last but certainly not least: what on earth is a BROGRAMMER? It is not a typo. It is a person who is a programmer, but also a "bro" (as in lifting weights
+      and flexing in front of the mirror occasionally). So, yeah, this site will also have some lifting-related content.</p>
+
+
+
+    </div>
+    </div>
+    </div>
+
+    </section>
