fix index page text

--- a/lib/the_brogrammer_web/templates/page/index.html.heex
+++ b/lib/the_brogrammer_web/templates/page/index.html.heex
@@ -1,7 +1,4 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace of mind from prototype to production</p>
-</section>
+<h1 class="title"><%=@page_title%></h1>
 <section class="hero is-fullheight with-image">
 <div class="hero-body">
 
