--- a/lib/the_brogrammer_web/templates/layout/navigation.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/navigation.html.heex
@@ -29,7 +29,7 @@
       </a>
 
        <a class="navbar-item">
-        <%= link "Blog", to: "/blog", class: "special-link"%>
+        <%= link "Blog", to: "https://connie.codes/blog", class: "special-link"%>
       </a>
 
       <a class="navbar-item">
@@ -37,7 +37,7 @@
       </a>
 
       <a class="navbar-item">
-        <%= link "Contact", to: "/contact", class: "special-link"%>
+        <%= link "Contact", to: "https://connie.codes/contact", class: "special-link"%>
       </a>
 
 
@@ -47,4 +47,5 @@
   </div>
 
 </nav>
+</body>
 </html>
