fix link to blog in navbar

--- a/lib/the_brogrammer_web/templates/layout/navigation.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/navigation.html.heex
@@ -29,7 +29,7 @@
       </a>
 
        <a class="navbar-item">
-        <%= link "Blog", to: "https://connie.codes/blog", class: "special-link"%>
+        <%= link "Blog", to: "/blog", class: "special-link"%>
       </a>
 
       <a class="navbar-item">
