add contact form and smaller fixes

--- a/lib/the_brogrammer_web/templates/layout/navigation.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/navigation.html.heex
@@ -37,7 +37,7 @@
       </a>
 
       <a class="navbar-item">
-        <%= link "Contact", to: "https://connie.codes/contact", class: "special-link"%>
+        <%= link "Contact", to: "/contact", class: "special-link"%>
       </a>
 
 
