improve about me text

--- a/lib/the_brogrammer_web/templates/page/about_me.html.heex
+++ b/lib/the_brogrammer_web/templates/page/about_me.html.heex
@@ -99,13 +99,13 @@
 
 
     <div class="tile is-parent">
-     <div class="is-child box" id="about-me-tile2">And this is where I am at right now, living the dream. I enjoy hiking, swimming in the lake and in the ocean.Going for
-         bike rides with my family. I love having a nice glass of red wine while reading a good book in the hammock on my deck.
-         I also like having a big cup of coffee in the morning while I am journaling also in my hammock. And last but not least: I love lifting in
-         my garage and being a "bro". As for the second part of the word "BRO-GRAMMER": during the last two years, I have noticed a huge shift away from traditional translation
-         requests to more and more machine translation post editing jobs. Depending on the source text, those can be either wonderful because machine translation can be uncannily
-         good (for example for contracts) or extremely frustrating when jobs require specific terminology or when the source text contains errors (garbage in -> garbage out; or
-         as a friend once put it very accurately: "You can't turn excrement [she used the less formal term] into chocolate")</div>
+     <div class="is-child box" id="about-me-tile2">And this is where I am at right now, living the dream. I love hiking, swimming in the lake and in the ocean. Going for
+         bike rides with my family. In the summer, I enjoy having my morning coffee outside on the deck listening to the birds. A glass of wine with a good book in the evening 
+         is also quite nice. And last but not least: I love lifting in my garage gym and being a "BRO". As for programming, the second part of being a "BROGRAMMER": 
+         over the past few years I have started to receive less and less traditional translation assignments and more and more requests for editing machine translated texts. 
+         Regardless of the machine translation quality (which can be remarkable), I found that I did not enjoy post editing. What I do enjoy, however, is writing
+         Elixir code. This is why I have decided to turn this new passion for Elixir into my next career. Feel free to head over to my blog to see how this endeavor is coming along.
+        </div>
 
     </div>
 
