make hyperlink to blog in about me

--- a/lib/the_brogrammer_web/templates/page/about_me.html.heex
+++ b/lib/the_brogrammer_web/templates/page/about_me.html.heex
@@ -104,7 +104,7 @@
          is also quite nice. And last but not least: I love lifting in my garage gym and being a "BRO". As for programming, the second part of being a "BROGRAMMER": 
          over the past few years I have started to receive less and less traditional translation assignments and more and more requests for editing machine translated texts. 
          Regardless of the machine translation quality (which can be remarkable), I found that I did not enjoy post editing. What I do enjoy, however, is writing
-         Elixir code. This is why I have decided to turn this new passion for Elixir into my next career. Feel free to head over to my blog to see how this endeavor is coming along.
+         Elixir code. This is why I have decided to turn this new passion for Elixir into my next career. Feel free to head over to my <a href="/blog">blog</a> to see how this endeavor is coming along.
         </div>
 
     </div>
