--- a/lib/the_brogrammer_web/templates/page/about_me.html.heex
+++ b/lib/the_brogrammer_web/templates/page/about_me.html.heex
@@ -1,123 +1,104 @@
-<h1 class="title"><%=@page_title%></h1>
- <div class="message">
+<h1 class="title"><%= @page_title %></h1>
+<div class="message">
   <div class="message-header">
-   <p>Who is this bro-gramming person anyway?</p>
+    <p>Who is this bro-gramming person anyway?</p>
   </div>
 
   <div class="message-body" id="about-me-message">
-   <div class="block">My name is Cornelia Kelinske.</div>
+    <div class="block">My name is Cornelia Kelinske.</div>
 
-   <div class="block">Instead of listing all the things that I am and obsessing over what to put first, I will use a chronological approach,
-    showing how my interests and passions over time have led me to where I am at now.
-   </div>
+    <div class="block">Instead of listing all the things that I am and obsessing over what to put first, I will use a chronological approach,
+      showing how my interests and passions over time have led me to where I am at now.</div>
   </div>
- </div>
+</div>
 
-
- <div class="tile is-ancestor">
+<div class="tile is-ancestor">
   <div class="tile is-parent">
-   <div class="tile is-child box">
-       <div class="block">I grew up in a small town close to <b>Nuremberg</b>, Germany, home to the best Bratwurst. From an early age, I have been fascinated with foreign languages, which is why I opted
-       to learn English, Latin and French in Middle and High School. After graduating from High School, I decided to pursue my passion for languages and
-       since I had zero interest in becoming a teacher, I decided to become a conference interpreter instead. Off to university I went, namely to the -- at least in
-       the interpreting and translating world -- renowned Faculty of Translation Studies, Linguistics and Cultural Studies of the Johannes Gutenberg University Mainz in <b>Germersheim</b>.
-       The highlight of my university years was the opportunity to study as an exchange student. First, I spent six months in <b>Dijon</b>, France, the home of Dijon mustard and crème de cassis where
-       I devoured my fair share (or maybe more) of <i>croissants</i> and <i>pain au chocolat</i>. My second semester abroad was at the University of Salford, right next to <b>Manchester</b>. I had the time
-       of my life. Fell in love with Manchester, spent many nights out dancing in Fifth Ave and met one of my best friends.</div>
-   </div>
+    <div class="tile is-child box">
+      <div class="block">I grew up in a small town close to <b>Nuremberg</b>, Germany, home to the best Bratwurst. From an early age, I have been fascinated with foreign languages, which is why I opted
+        to learn English, Latin and French in Middle and High School. After graduating from High School, I decided to pursue my passion for languages and
+        since I had zero interest in becoming a teacher, I decided to become a conference interpreter instead. Off to university I went, namely to the -- at least in
+        the interpreting and translating world -- renowned Faculty of Translation Studies, Linguistics and Cultural Studies of the Johannes Gutenberg University Mainz in <b>Germersheim</b>.
+        The highlight of my university years was the opportunity to study as an exchange student. First, I spent six months in <b>Dijon</b>, France, the home of Dijon mustard and crème de cassis where
+        I devoured my fair share (or maybe more) of <i>croissants</i> and <i>pain au chocolat</i>. My second semester abroad was at the University of Salford, right next to <b>Manchester</b>. I had the time
+        of my life. Fell in love with Manchester, spent many nights out dancing in Fifth Ave and met one of my best friends.</div>
+    </div>
   </div>
 
   <div class="tile is-parent">
-   <div class="tile is-child box" id="about-me-tile2">
-    <figure class="image is-2by5">
-     <img src={Routes.static_path(@conn, "/images/image042.jpg")}/>
-    </figure>
-
-   </div>
+    <div class="tile is-child box" id="about-me-tile2">
+      <figure class="image is-2by5">
+        <img src={Routes.static_path(@conn, "/images/image042.jpg")} />
+      </figure>
+    </div>
   </div>
 
   <div class="tile is-parent">
-   <div class="tile is-child box">
-       <div class="block">I graduated as a <i>Diplom-Dolmetscher</i> (German equivalent to a M.A. in conference interpreting) for German, English and French in 2008. Immediately after graduating,
-       I accepted a position as a translator and occasional interpreter with the Federal Office of Languages, the language service of the German military. My workplace was
-       in <b>Koblenz</b>, where the rivers Rhine-Moselle Region, that is famous for its castles and wine.
-       As part of the job, I had to undergo a very abbreviated basic military training, since translators of the Federal Office of Languages were regularly sent to accompany the
-       German troops in areas of operation so as to provide translation services in various camps. During the military training, I became aware of how out of shape I was
-       (I might have enjoyed that good wine a little bit too much). I picked up running again and joined a gym for the first time, just doing cardio and machines, though. My most fateful assignment as an interpreter occurred in April 2009 in <b>Ingolstadt</b>, a medium-sized town in Bavaria. I was sent to interpret for
-        Canadian soldiers who were sent to Germany for four weeks, in order to learn how to operate the AEV Badger, a German tank that they would be using in Afghanistan.</div>
-   </div>
-  </div>
- </div>
-
- <div class="tile is-ancestor">
-
-
-  <div class="tile is-parent is-vertical is-8">
-
-  <div class="tile">
-   <div class="tile is-parent">
-   <div class="tile is-child box" id="about-me-tile2">
-    <div class="block"> One of the Canadian soldiers was Alan Vardy (<a><%= link "alanvardy.com", to: "http://alanvardy.com", target: "_blank" %></a>), who is now my
-        husband of more than a decade. He is also the one who introduced me to my other big love: the barbell and all things lifting. Lifting kept me somewhat sane during the
-        two years of long-distance relationship that followed. The longest time that we spent in the same country in those two years were the few months that our respective
-        deployments to Afghanistan overlapped. Of course we did not see each other during that time: I was the deputy head of the language service in a German military camp
-        in <b>Mazaer-e-Sharif</b>, while he was clearing bombs down in the South.</div>
-   </div>
-   </div>
-
-   <div class="tile is-parent">
-   <div class="tile is-child box">
-      <div class="block">In February 2011, I was finally able to move to Canada and join Alan in <b>Edmonton</b>, Alberta. It was not fun. Because it was February and a tough
-         winter even for Edmonton: we hit -40 Celsius quite a few times that year. I started working as a freelance translator for English and German, became a certified member of
-         Associations of Translators and Interpreters of Alberta and built a successful one-woman translation business over the years. Our son Ulrik was born in 2015 and at the end of
-         2019 we finally moved away from Edmonton to <b>Victoria</b> on Vancouver Island in beautiful British Columbia.
+    <div class="tile is-child box">
+      <div class="block">
+        I graduated as a <i>Diplom-Dolmetscher</i> (German equivalent to a M.A. in conference interpreting) for German, English and French in 2008. Immediately after graduating,
+        I accepted a position as a translator and occasional interpreter with the Federal Office of Languages, the language service of the German military. My workplace was
+        in <b>Koblenz</b>, where the rivers Rhine-Moselle Region, that is famous for its castles and wine.
+        As part of the job, I had to undergo a very abbreviated basic military training, since translators of the Federal Office of Languages were regularly sent to accompany the
+        German troops in areas of operation so as to provide translation services in various camps. During the military training, I became aware of how out of shape I was
+        (I might have enjoyed that good wine a little bit too much). I picked up running again and joined a gym for the first time, just doing cardio and machines, though. My most fateful assignment as an interpreter occurred in April 2009 in <b>Ingolstadt</b>
+        , a medium-sized town in Bavaria. I was sent to interpret for
+        Canadian soldiers who were sent to Germany for four weeks, in order to learn how to operate the AEV Badger, a German tank that they would be using in Afghanistan.
       </div>
     </div>
-    </div>
-    </div>
+  </div>
+</div>
 
-   <div class="tile is-parent">
-   <div class="tile is-child box">
-    <figure class="image is-2by5">
-     <img src={Routes.static_path(@conn, "/images/IMG_4944.JPG")}/>
-    </figure>
-   </div>
-   </div>
-
-   </div>
-
-   <div class="tile">
-   <div class="tile is-parent is-vertical">
-
-    <div class="tile is-parent">
-    <div class="is-child box" id="about-me-tile">
-    <figure class="image is-2by5">
-     <img src={Routes.static_path(@conn, "/images/Lifting.jpg")}/>
-    </figure>
-    </div>
-    </div>
-
-
-    <div class="tile is-parent">
-     <div class="is-child box" id="about-me-tile2">And this is where I am at right now, living the dream. I love hiking, swimming in the lake and in the ocean. Going for
-         bike rides with my family. In the summer, I enjoy having my morning coffee outside on the deck listening to the birds. A glass of wine with a good book in the evening 
-         is also quite nice. And last but not least: I love lifting in my garage gym and being a "BRO". As for programming, the second part of being a "BROGRAMMER": 
-         over the past few years I have started to receive less and less traditional translation assignments and more and more requests for editing machine translated texts. 
-         Regardless of the machine translation quality (which can be remarkable), I found that I did not enjoy post editing. What I do enjoy, however, is writing
-         Elixir code. This is why I have decided to turn this new passion for Elixir into my next career. Feel free to head over to my <a href="/blog">blog</a> to see how this endeavor is coming along.
+<div class="tile is-ancestor">
+  <div class="tile is-parent is-vertical is-8">
+    <div class="tile">
+      <div class="tile is-parent">
+        <div class="tile is-child box" id="about-me-tile2">
+          <div class="block">One of the Canadian soldiers was Alan Vardy (<a><%= link("alanvardy.com", to: "http://alanvardy.com", target: "_blank") %></a>), who is now my
+            husband of more than a decade. He is also the one who introduced me to my other big love: the barbell and all things lifting. Lifting kept me somewhat sane during the
+            two years of long-distance relationship that followed. The longest time that we spent in the same country in those two years were the few months that our respective
+            deployments to Afghanistan overlapped. Of course we did not see each other during that time: I was the deputy head of the language service in a German military camp
+            in <b>Mazaer-e-Sharif</b>, while he was clearing bombs down in the South.</div>
         </div>
+      </div>
 
+      <div class="tile is-parent">
+        <div class="tile is-child box">
+          <div class="block">In February 2011, I was finally able to move to Canada and join Alan in <b>Edmonton</b>, Alberta. It was not fun. Because it was February and a tough
+            winter even for Edmonton: we hit -40 Celsius quite a few times that year. I started working as a freelance translator for English and German, became a certified member of
+            Associations of Translators and Interpreters of Alberta and built a successful one-woman translation business over the years. Our son Ulrik was born in 2015 and at the end of
+            2019 we finally moved away from Edmonton to <b>Victoria</b> on Vancouver Island in beautiful British Columbia.</div>
+        </div>
+      </div>
     </div>
 
-
-
-
+    <div class="tile is-parent">
+      <div class="tile is-child box">
+        <figure class="image is-2by5">
+          <img src={Routes.static_path(@conn, "/images/IMG_4944.JPG")} />
+        </figure>
+      </div>
     </div>
+  </div>
 
-   </div>
+  <div class="tile">
+    <div class="tile is-parent is-vertical">
+      <div class="tile is-parent">
+        <div class="is-child box" id="about-me-tile">
+          <figure class="image is-2by5">
+            <img src={Routes.static_path(@conn, "/images/Lifting.jpg")} />
+          </figure>
+        </div>
+      </div>
 
-
-
-
-
+      <div class="tile is-parent">
+        <div class="is-child box" id="about-me-tile2">And this is where I am at right now, living the dream. I love hiking, swimming in the lake and in the ocean. Going for
+          bike rides with my family. In the summer, I enjoy having my morning coffee outside on the deck listening to the birds. A glass of wine with a good book in the evening
+          is also quite nice. And last but not least: I love lifting in my garage gym and being a "BRO". As for programming, the second part of being a "BROGRAMMER":
+          over the past few years I have started to receive less and less traditional translation assignments and more and more requests for editing machine translated texts.
+          Regardless of the machine translation quality (which can be remarkable), I found that I did not enjoy post editing. What I do enjoy, however, is writing
+          Elixir code. This is why I have decided to turn this new passion for Elixir into my next career. Feel free to head over to my <a href="/blog">blog</a> to see how this endeavor is coming along.</div>
+      </div>
+    </div>
+  </div>
 </div>
