fix_deprecation_warning

--- a/lib/the_brogrammer_web/templates/page/about_me.html.heex
+++ b/lib/the_brogrammer_web/templates/page/about_me.html.heex
@@ -36,7 +36,8 @@
   <div class="tile is-parent">
     <div class="tile is-child box">
       <div class="block">
-        I graduated as a <i>Diplom-Dolmetscher</i> (German equivalent to a M.A. in conference interpreting) for German, English and French in 2008. Immediately after graduating,
+        I graduated as a <i>Diplom-Dolmetscher</i>
+        (German equivalent to a M.A. in conference interpreting) for German, English and French in 2008. Immediately after graduating,
         I accepted a position as a translator and occasional interpreter with the Federal Office of Languages, the language service of the German military. My workplace was
         in <b>Koblenz</b>, where the rivers Rhine-Moselle Region, that is famous for its castles and wine.
         As part of the job, I had to undergo a very abbreviated basic military training, since translators of the Federal Office of Languages were regularly sent to accompany the
