--- a/lib/the_brogrammer_web/templates/layout/navigation.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/navigation.html.heex
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
+  <script src="https://code.iconify.design/3/3.0.0/iconify.min.js">
+  </script>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
