--- a/lib/the_brogrammer_web/templates/layout/navigation.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/navigation.html.heex
@@ -25,19 +25,19 @@
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item">
-            <%= link("Home", to: "/home", class: "special-link") %>
+            {link("Home", to: "/home", class: "special-link")}
           </a>
 
           <a class="navbar-item">
-            <%= link("Blog", to: "/blog", class: "special-link") %>
+            {link("Blog", to: "/blog", class: "special-link")}
           </a>
 
           <a class="navbar-item">
-            <%= link("About me", to: "/about", class: "special-link") %>
+            {link("About me", to: "/about", class: "special-link")}
           </a>
 
           <a class="navbar-item">
-            <%= link("Contact", to: "/contact", class: "special-link") %>
+            {link("Contact", to: "/contact", class: "special-link")}
           </a>
         </div>
         <div class="navbar-brand">
