--- a/lib/the_brogrammer_web/templates/layout/root.html.heex
+++ b/lib/the_brogrammer_web/templates/layout/root.html.heex
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%= csrf_meta_tag() %>
+    {csrf_meta_tag()}
     <.live_title>
-      <%= assigns[:page_title] || "TheBrogrammer" %>
+      {assigns[:page_title] || "TheBrogrammer"}
     </.live_title>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}>
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header>
-      <%= render("navigation.html", assigns) %>
+      {render("navigation.html", assigns)}
     </header>
-    <%= @inner_content %>
+    {@inner_content}
   </body>
 </html>
