--- a/lib/the_brogrammer_web/templates/page/about_me.html.heex
+++ b/lib/the_brogrammer_web/templates/page/about_me.html.heex
@@ -1,4 +1,4 @@
-<h1 class="title"><%= @page_title %></h1>
+<h1 class="title">{@page_title}</h1>
 <div class="message">
   <div class="message-header">
     <p>Who is this bro-gramming person anyway?</p>
