--- a/lib/the_brogrammer_web/templates/page/index.html.heex
+++ b/lib/the_brogrammer_web/templates/page/index.html.heex
@@ -1,4 +1,4 @@
-<h1 class="title"><%= @page_title %></h1>
+<h1 class="title">{@page_title}</h1>
 <section class="hero is-fullheight with-image">
   <div class="hero-body">
     <div class="message">
